nullaway_error_84B2F4C4-33B8-4C96-930B-F2CE9119FBE0.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/http/ResponseEntity.java:166: error: [NullAway] dereferenced expression otherEntity is @Nullable
		return ObjectUtils.nullSafeEquals(this.status, otherEntity.status);
		                                                          ^
    (see http://t.uber.com/nullaway )
